move resolved api schema into topics schema directory
