# public/openapi/write.yaml
@@ -50,8 +50,6 @@ tags:
   - name: files
     description: File upload routes
 paths:
-  /topics/{tid}/resolved:
-    $ref: 'write/resolved.yaml'
   /ping:
     $ref: 'write/ping.yaml'
   /utilities/login:
@@ -146,6 +144,8 @@ paths:
     $ref: 'write/topics/tid/state.yaml'
   /topics/{tid}/lock:
     $ref: 'write/topics/tid/lock.yaml'
+  /topics/{tid}/resolved:
+    $ref: 'write/topics/tid/resolved.yaml'
   /topics/{tid}/pin:
     $ref: 'write/topics/tid/pin.yaml'
   /topics/{tid}/follow:
