# src/routes/write/topics.js
@@ -18,6 +18,9 @@ module.exports = function () {
 	setupApiRoute(router, 'post', '/:tid', [middleware.checkRequired.bind(null, ['content']), middleware.assert.topic], controllers.write.topics.reply);
 	setupApiRoute(router, 'delete', '/:tid', [...middlewares], controllers.write.topics.purge);
 
+	setupApiRoute(router, 'put', '/:tid/resolved', [...middlewares], controllers.write.topics.markResolved);
+	setupApiRoute(router, 'delete', '/:tid/resolved', [...middlewares], controllers.write.topics.markUnresolved);
+
 	setupApiRoute(router, 'put', '/:tid/state', [...middlewares], controllers.write.topics.restore);
 	setupApiRoute(router, 'delete', '/:tid/state', [...middlewares], controllers.write.topics.delete);
 
